--- a/roles/cart/templates/cart.service.j2
+++ b/roles/cart/templates/cart.service.j2
@@ -1,14 +1,14 @@
-[Unit]
-Description = User Service
+Unit]
+Description = Cart Service
 [Service]
 User=roboshop
-Environment=MONGO=true
 // highlight-start
-Environment=REDIS_URL='{{ REDIS_HOST }}:6379'
-Environment=CATALOGUE_URL="{{ CATALOGUE_HOST }}:27017/users"
+Environment=REDIS_HOST={{ REDIS_HOST }}
+Environment=CATALOGUE_HOST={{ CATALOGUE_HOST }}
+Environment=CATALOGUE_PORT=8080
 // highlight-end
 ExecStart=/bin/node /app/server.js
-SyslogIdentifier=user
+SyslogIdentifier=cart
 
 [Install]
 WantedBy=multi-user.target
