--- a/roles/cart/templates/cart.service.j2
+++ b/roles/cart/templates/cart.service.j2
@@ -4,7 +4,7 @@ Description = Cart Service
 User=roboshop
 // highlight-start
 Environment=REDIS_HOST= redis.kranthi.fun 
-Environment=CATALOGUE_HOST={{ CATALOGUE_HOST }}
+Environment=CATALOGUE_HOST= catalogue.kranthi.fun
 Environment=CATALOGUE_PORT=8080
 // highlight-end
 ExecStart=/bin/node /app/server.js
