--- a/roles/user/templates/user.service.j2
+++ b/roles/user/templates/user.service.j2
@@ -4,8 +4,8 @@ Description = User Service
 User=roboshop
 Environment=MONGO=true
 // highlight-start
-Environment=REDIS_URL= '{{ REDIS_HOST }}:6379'
-Environment=MONGO_URL= "{{ MONGODB_HOST }}:27017/users"
+Environment=REDIS_URL= redis.kranthi.fun
+Environment=MONGO_URL= mongodb.kranthi.fun
 // highlight-end
 ExecStart=/bin/node /app/server.js
 SyslogIdentifier=user
