--- a/roles/user/templates/user.service.j2
+++ b/roles/user/templates/user.service.j2
@@ -4,7 +4,7 @@ Description = User Service
 User=roboshop
 Environment=MONGO=true
 // highlight-start
-Environment=REDIS_URL= redis.kranthi.fun
+Environment=CART_URL= cart.kranthi.fun
 Environment=MONGO_URL= mongodb.kranthi.fun
 // highlight-end
 ExecStart=/bin/node /app/server.js
