--- a/roles/payment/templates/payment.service.j2
+++ b/roles/payment/templates/payment.service.j2
@@ -7,7 +7,7 @@ WorkingDirectory=/app
 // highlight-start
 Environment=CART_HOST= cart.kranthi.fun
 Environment=CART_PORT=8080
-Environment=USER_HOST={{ USER_HOST }}
+Environment=USER_HOST= user.kranthi.fun
 Environment=USER_PORT=8080
 Environment=AMQP_HOST={{ RABBITMQ_HOST }}
 // highlight-end
