--- a/roles/payment/templates/payment.service.j2
+++ b/roles/payment/templates/payment.service.j2
@@ -9,7 +9,7 @@ Environment=CART_HOST= cart.kranthi.fun
 Environment=CART_PORT=8080
 Environment=USER_HOST= user.kranthi.fun
 Environment=USER_PORT=8080
-Environment=AMQP_HOST={{ RABBITMQ_HOST }}
+Environment=AMQP_HOST= rabbitmq.kranthi.fun
 // highlight-end
 Environment=AMQP_USER={{ RABBITMQ_USER }}
 Environment=AMQP_PASS={{ RABBITMQ_PASS }}
