--- a/roles/shipping/templates/shipping.service.j2
+++ b/roles/shipping/templates/shipping.service.j2
@@ -4,7 +4,7 @@ Description=Shipping Service
 [Service]
 User=roboshop
 // highlight-start
-Environment=CART_ENDPOINT= cart.kranthi.fun :8080
+Environment=CART_ENDPOINT= cart.kranthi.fun
 Environment=DB_HOST= mysql.kranthi.fun
 // highlight-end
 ExecStart=/bin/java -jar /app/shipping.jar
